insertado recyclerview en horizontal

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Proyecto_Eventos</string>
+    <string name="mas_conciertos">Más Conciertos</string>
 </resources>
