creando recyclerview para poner fotos de a 2

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="concertos">CONCERTOS</string>
     <string name="festivais">FESTIVAIS</string>
     <string name="festPopulares">FESTAS POPULARES</string>
+    <string name="atopa_o_teu_concerto_favorito">Atopa o teu concerto favorito</string>
 </resources>
