--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,10 +9,17 @@
     <string name="atopa_a_tua_festa_popular_favorita">Atopa a tua festa favorita</string>
     <string name="provincias">Provincias :</string>
     <string name="filtra_nas_cidades">Filtra nas cidades</string>
-    <string name="ya_tengo_una_cuenta"><u>Xa teño unha conta</u></string>
+    <string name="ya_tengo_una_cuenta"><u>Xa teño unha conta!</u></string>
     <string name="iniciar_sesion">Iniciar Sesion</string>
     <string name="restablecer_contrasinal">Restablecer contrasinal</string>
     <string name="correo_electr_nico">Correo electrónico</string>
+    <string name="registro">Rexístro</string>
+    <string name="prezo">Prezo: </string>
+    <string name="cerrar_sesion">Pechar Sesion </string>
+    <string name="seguro">Estás seguro de que queres pechar a sesión? </string>
+    <string name="sair">Sair</string>
+    <string name="si" translatable="false">Si</string>
+    <string name="no">Non</string>
 
     <!--Texto Toast-!-->
 
@@ -42,4 +49,5 @@
     <string name="contrasinal">Contrasinal</string>
     <string name="email">Email</string>
     <string name="olvidaches_o_contrasinal">¿Olvidaches o contrasinal?</string>
+    <string name="quieres_agregar_un_evento">¿Queres agregar un evento?</string>
 </resources>
