--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,11 +15,14 @@
     <string name="correo_electr_nico">Correo electrónico</string>
     <string name="registro">Rexístro</string>
     <string name="prezo">Prezo: </string>
+    <string name="prezo2">Prezo </string>
     <string name="cerrar_sesion">Pechar Sesion </string>
     <string name="seguro">Estás seguro de que queres pechar a sesión? </string>
     <string name="sair">Sair</string>
     <string name="si" translatable="false">Si</string>
     <string name="no">Non</string>
+    <string name="selecciona_tipo_evento" translatable="false">Elixe o tipo de evento</string>
+    <string name="fecha">Data:</string>
 
     <!--Texto Toast-!-->
 
@@ -36,8 +39,8 @@
     <string name="mercar_entradas">Mercar Entradas</string>
     <string name="subir_imagen">SUBIR IMAGEN</string>
     <string name="selecciona_imagen">SELECCIONA IMAGEN</string>
-    <string name="concerto_existe">Xa existe un concerto con ese nome</string>
-    <string name="concerto_agregado">Concerto engadido</string>
+    <string name="concerto_existe">Xa existe un evento con ese nome</string>
+    <string name="concerto_agregado">Evento engadido</string>
     <string name="concerto_erro">Erro</string>
 
     <!--Provincias-!-->
@@ -50,4 +53,12 @@
     <string name="email">Email</string>
     <string name="olvidaches_o_contrasinal">¿Olvidaches o contrasinal?</string>
     <string name="quieres_agregar_un_evento">¿Queres anunciar un evento?</string>
+    <string name="nome_evento">Nome Evento</string>
+    <string name="lugar">Lugar</string>
+    <string name="xenero">Xenero</string>
+    <string name="imaxen_url">Imaxen URL</string>
+    <string name="data">Data</string>
+    <string name="url_entrada">Url Mercar Entrada</string>
+    <string name="provincia">Provincia</string>
+    <string name="nome_id">Nome ID</string>
 </resources>
