--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,6 +24,7 @@
     <string name="selecciona_tipo_evento" translatable="false">Elixe o tipo de evento</string>
     <string name="fecha">Data:</string>
     <string name="otro_evento">Queres agregar outro evento?</string>
+    <string name="rol_inicio_sesion">Iniciou sesión como </string>
 
     <!--Texto Toast-!-->
 
@@ -52,8 +53,8 @@
     <string name="crear_usuario">Crear Usuario</string>
     <string name="contrasinal">Contrasinal</string>
     <string name="email">Email</string>
-    <string name="olvidaches_o_contrasinal">¿Olvidaches o contrasinal?</string>
-    <string name="quieres_agregar_un_evento">¿Queres anunciar un evento?</string>
+    <string name="olvidaches_o_contrasinal">Olvidaches o contrasinal?</string>
+    <string name="quieres_agregar_un_evento">Queres anunciar un evento?</string>
     <string name="nome_evento">Nome Evento</string>
     <string name="lugar">Lugar</string>
     <string name="xenero">Xenero</string>
