--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -25,6 +25,7 @@
     <string name="selecciona_tipo_evento">Selecciona el tipo de Evento</string>
     <string name="fecha">Fecha: </string>
     <string name="otro_evento">¿Quieres agregar otro evento?</string>
+    <string name="rol_inicio_sesion">Inició sesión como </string>
 
     <string name="nome_evento">Nombre Evento</string>
     <string name="lugar">Lugar</string>
